ubuntu-image (1.0+17.04ubuntu1) UNRELEASED; urgency=medium

  * Exit with a console message instead of crashing when the contents of a
    partition does not fit within the specified size.  (LP: #1666580)
  * Don't install an unusable global flake8 extension.  (LP: #1631156)

 -- Barry Warsaw <barry@ubuntu.com>  Wed, 22 Feb 2017 11:30:01 -0500

ubuntu-image (0.15+17.04ubuntu1) zesty; urgency=medium

  * ubuntu-image now supports gadget.yaml files with multiple volume
    specifications.  Each volume describes a different disk image.  For
    the multi-volume case, no implicit root file system structure is added
    at all; the root file system partition must be defined in the
    gadget.yaml.  -o/--output is ignored in the multi-volume case.
    (LP: #1641727)
  * Add -O/--output-dir command line options.  Disk image files are
    written here using the volume name and a .img suffix.  Deprecate
    -o/--output.  -O and -o are mutually exclusive.
  * Handle structure parts with size or offset < 1MiB.  (LP: #1630709)
  * Warn when the size or offset is not a multiple of the sector size.
    (LP: #1663172 and LP: #1621151)
  * Allow and ignore any string values in the ``defaults`` section.
    (LP: #1661515)
  * Handle a couple more cases where ubuntu-image as a snap cannot read
    from /tmp (model assertions and extra snaps).  (LP: #1663424)
  * Add a release script.  (LP: #1655669)
  * Version numbers for the snap now say "+snap" instead of "+real".
    (LP: #1664296)

 -- Barry Warsaw <barry@ubuntu.com>  Mon, 06 Feb 2017 18:36:02 -0500

ubuntu-image (0.14+17.04ubuntu1) zesty; urgency=medium

  * Add CI for Python 3.6.  (LP: #1650402)
  * Fix the test suite for sparse files on ZFS.  (LP: #1656371)
  * d/t/control: Add Restriction: isolation-machine for the mount test
    since devmapper is not namespaced and thus can interfere with other
    containers.  This will prevent the test from running in schroot and