@@ -87,6 +87,11 @@ def parseargs(argv=None):
         extended syntax to define the suggested size for the disk images
         generated by a multi-volume gadget.yaml spec.  See the ubuntu-image(1)
         manpage for details."""))
+    common_group.add_argument(
+        '--image-file-list',
+        default=None, metavar='FILENAME',
+        help=_("""Print to this file, a list of the file system paths to
+        all the disk images created by the command, if any."""))
     output_group = common_group.add_mutually_exclusive_group()
     output_group.add_argument(
         '-O', '--output-dir',
@@ -219,6 +224,18 @@ def main(argv=None):
     # complete successfully.  For example, if `snap prepare-image` failed.
     if state_machine.exitcode != 0:
         return state_machine.exitcode
+    # Write out the list of images, if there are any.
+    if (state_machine.gadget is not None
+            and state_machine.done
+            and args.image_file_list is not None):
+        with open(args.image_file_list, 'w', encoding='utf-8') as fp:
+            if args.output is None:
+                for name in state_machine.gadget.volumes:
+                    path = os.path.join(
+                        args.output_dir, '{}.img'.format(name))
+                    print(path, file=fp)
+            else:
+                print(args.output, file=fp)
     # Everything's done, now handle saving state if necessary.
     if pickle_file is not None:
         with open(pickle_file, 'wb') as fp:
